# decision-machine

./: README.md  pyproject.toml
decision/: asgi.py  settings.py  urls.py  wsgi.py
display/: forms.py  urls.py  views.py
display/templates/: index.html
display/tests/: test_views.py
