[tool.poetry]
name = "decision-machine"
version = "0.1.0"
description = ""
authors = ["Olivia Telles <alma.telles@lytica.ai>"]
readme = "README.md"
packages = [{include = "decision_machine"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.1.7"
include = "^0.2.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
